--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,7 +12,7 @@
     "types": "./dist/types/index.d.ts"
   },
   "scripts": {
-    "push": "npm run tools:clean && git add . && git commit -m \"update\" && git push",
+    "push": "git add . && git commit -m \"update\" && git push",
     "prepublish": "npm run build",
     "build:cjs": "tsc -p tools/config/tsconfig.cjs.json",
     "build:esm": "tsc -p tools/config/tsconfig.esm.json",
