--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "arii packages",
   "main": "index.js",
   "scripts": {
-    "push": "git add . && git commit -m \"update\" && git push"
+    "push": "git add . && git commit -m \"update\" && git push",
+    "build": "node tools/scripts/prepublish.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "colors": "^1.4.0"
+  }
 }
